resources/tests/invalid_syntax/fn_call_undef.ct
//Error: Function of name 'hela' does not exist!
//1
fn hello(i64 a)->i32;

fn main()->void
{
  hela(); //<- error
  hello(10i64); //<- no error
}